fixed overlap issue

--- a/app/assets/stylesheets/question.css
+++ b/app/assets/stylesheets/question.css
@@ -135,7 +135,7 @@ li:nth-child(2n) {
   color: white;
   position: absolute;
   background: none;
-  right:10%;
+  right:13%;
   padding-top: 10px;
   font-size: 20px;
 }
